--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "github-slugger": "^1.4.0",
     "gray-matter": "^4.0.2",
     "image-size": "1.0.0",
+    "lucide-react": "^0.396.0",
     "next": "13.5.6",
     "next-contentlayer": "0.3.4",
     "next-themes": "^0.2.1",
